# orcastrate

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  action.yml  cliff.toml  orchestrator.toml
.github/: release.yml
.github/workflows/: bump-version.yml  bump.yml  ci.yml  pr-title.yml  release.yml  sync.yml
src/: cli.rs  config.rs  diff.rs  error.rs  gha.rs  main.rs  sync.rs
src/github/: mod.rs
src/template/: frontmatter.rs  mod.rs  render.rs
templates/: node-ci.yml  pr-title.yml  rust-ci.yml
